--- a/resources/fxml/clientPage.fxml
+++ b/resources/fxml/clientPage.fxml
@@ -6,17 +6,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="369.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" >
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="518.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="503.0" minWidth="10.0" prefWidth="480.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="93.0" minHeight="0.0" prefHeight="40.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="93.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="273.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TableView fx:id="tableViewCars" prefHeight="290.0" prefWidth="573.0" GridPane.rowIndex="2">
+      <TableView fx:id="tableViewCars" prefHeight="180.0" prefWidth="354.0" GridPane.rowIndex="2">
         <columns>
             <TableColumn fx:id="colId" minWidth="0.0" prefWidth="0.0" text="ID" />
           <TableColumn fx:id="colName" prefWidth="93.99999237060547" text="Naziv" />
@@ -27,7 +27,7 @@
             <TableColumn fx:id="colPrice" prefWidth="109.0" text="Cijena po danu" />
         </columns>
       </TableView>
-      <ChoiceBox fx:id="choiceType" value="Putnicki automobil" onAction="#changeType" prefWidth="150.0" GridPane.rowIndex="1">
+      <ChoiceBox fx:id="choiceType" onAction="#changeType" prefWidth="150.0" value="Putnicki automobil" GridPane.rowIndex="1">
           <items>
               <FXCollections fx:factory="observableArrayList">
                   <String fx:value="Putnicki automobil" />
@@ -36,6 +36,12 @@
               </FXCollections>
           </items>
       </ChoiceBox>
+      <ButtonBar>
+         <buttons>
+             <Button mnemonicParsing="false" onAction="#seeReservationAction" text="Rezervacija" />
+            <Button mnemonicParsing="false" onAction="#logOutAction" text="Odjavi se" />
+         </buttons>
+      </ButtonBar>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
