--- a/resources/fxml/start.fxml
+++ b/resources/fxml/start.fxml
@@ -1,33 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:controller="sample.StartController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="245.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="289.0" minWidth="10.0" prefWidth="179.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="436.0" minWidth="10.0" prefWidth="131.0" />
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+    <stylesheets>
+        <URL value="@/css/rentacar.css" />
+    </stylesheets>
+    <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="687.0" minWidth="10.0" prefWidth="687.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="413.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="143.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="143.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="92.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="92.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="293.0" minHeight="10.0" prefHeight="207.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="361.0" minHeight="10.0" prefHeight="262.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label alignment="TOP_LEFT" text="Rent a car">
+      <AnchorPane fx:id="image" prefHeight="432.0" prefWidth="440.0" GridPane.rowSpan="2" />
+      <Label fx:id="rent" text="Rent a car" GridPane.columnIndex="1">
          <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="30.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="80.0" />
+         </GridPane.margin>
+      </Label>
+      <GridPane prefHeight="274.0" prefWidth="423.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="10.0" prefWidth="290.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="106.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="83.0" minHeight="9.0" prefHeight="51.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="166.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="164.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="164.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Logujte se" GridPane.rowIndex="1">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="80.0" />
+               </GridPane.margin>
+            </Label>
+            <Label text="Nemate korisnički račun?" GridPane.columnSpan="2" GridPane.rowIndex="2">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="80.0" />
+               </GridPane.margin>
+            </Label>
+            <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#loginAction" prefHeight="25.0" prefWidth="80.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="btnRegistration" mnemonicParsing="false" onAction="#registrationAction" prefHeight="25.0" prefWidth="80.0" text="Registracija" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <Label text="Kvalitetna i pouzdana vozila" GridPane.columnIndex="1">
+         <GridPane.margin>
+            <Insets left="80.0" top="100.0" />
+         </GridPane.margin>
+         <font>
+            <Font size="17.0" />
          </font>
       </Label>
-      <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#loginAction" text="Logujte se" GridPane.columnIndex="1" GridPane.rowIndex="1" prefWidth="Infinity"/>
-      <Label text="Nemate korisnički račun?" GridPane.rowIndex="2" />
-      <Button fx:id="btnRegistration" mnemonicParsing="false" onAction="#registrationAction" text="Registrujte se" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="Infinity"/>
-      <Label text="Za pristup aplikaciji" GridPane.rowIndex="1" />
    </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
 </GridPane>
