--- a/resources/fxml/carDetails.fxml
+++ b/resources/fxml/carDetails.fxml
@@ -41,7 +41,7 @@
       <Label text="Dostupnost:" GridPane.rowIndex="12" />
       <Label fx:id="lblBrand" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Label fx:id="lblModel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Label fx:id="lblType" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label fx:id="lblType" prefHeight="17.0" prefWidth="6.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <Label fx:id="lblYear" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Label fx:id="lblTransmission" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <Label fx:id="lblFuelConsumption" GridPane.columnIndex="1" GridPane.rowIndex="6" />
